--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
-  "name": "code-editor",
+  "name": "code-play-ground",
   "version": "0.1.0",
   "private": true,
+  "description": "An online code editor to write, run, and share HTML, CSS, and JavaScript in real time.",
+  "author": {
+    "name": "Pinku Kumar",
+    "email": "coderpinku@gmail.com"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/coderpinku/CodePlayground.git"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,17 +19,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "bootstrap": "^5.3.6",
+    "next": "15.3.3",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
